add tmux plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@
 
 # 命令回滚/历史数量限制
 set -g history-limit 2048
+set -g set-clipboard on
 
 # 从 1 开始编号，而不是从 0 开始
 set -g base-index 1
@@ -91,3 +92,8 @@ set -g status-left "#[fg=#555555] #S#[fg=#555555] | #[fg=#555555]"
 set -g status-right "#[fg=#555555]#H"
 
 set-option -g escape-time 0
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
+set -g @yank_action 'copy-pipe'
