--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,9 @@ set -g base-index 1
 # 鼠标
 set-option -g mouse on
 
+# 256颜色
+set -g default-terminal "xterm-256color"
+
 ### 快捷键设置
 ###########################################################################
 
@@ -92,6 +95,10 @@ set -g status-left "#[fg=#555555] #S#[fg=#555555] | #[fg=#555555]"
 set -g status-right "#[fg=#555555]#H"
 
 set-option -g escape-time 0
+
+# 自动安装tpm
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 
