--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.zshrc: zshrc
     ~/.config/i3: i3
     ~/.config/alacritty: alacritty
+    ~/.config/systemd/user/aria2.service: aria2_rpc/aria2.service
 
 - create:
     - ~/.vim/undo-history
@@ -22,3 +23,5 @@
   - [git submodule update --init --recursive, Installing submodules]
   - [cd ./aria2_rpc && ./mac_install.sh, Add aria2 rpc services]
   - [pip3 install pynvim]
+  - touch ~/.config/aria2_rpc/aria2.session 
+
