--- a/aria2_rpc/aria2.conf
+++ b/aria2_rpc/aria2.conf
@@ -4,28 +4,35 @@
 ## 文件保存相关 #
 
 # 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
-dir=/Users/osennyaya/downloads
+dir=./Download/
 # 启用磁盘缓存, 0为禁用缓存, 需1.16以上版本, 默认:16M
 #disk-cache=32M
 # 文件预分配方式, 能有效降低磁盘碎片, 默认:prealloc
 # 预分配所需时间: none < falloc ? trunc < prealloc
 # falloc和trunc则需要文件系统和内核支持
 # NTFS建议使用falloc, EXT3/4建议trunc, MAC 下需要注释此项
-#file-allocation=none
+file-allocation=none
 # 断点续传
 continue=true
 
+# 始终尝试断点续传，无法断点续传则终止下载，默认：true
+always-resume=false
+
+# 不支持断点续传的 URI 数值，当 always-resume=false 时生效。
+# 达到这个数值从将头开始下载，值为 0 时所有 URI 不支持断点续传时才从头开始下载。
+max-resume-failure-tries=0
 ## 下载连接相关 ##
 
 # 最大同时下载任务数, 运行时可修改, 默认:5
 #max-concurrent-downloads=5
 # 同一服务器连接数, 添加时可指定, 默认:1
 max-connection-per-server=8
+
 # 最小文件分片大小, 添加时可指定, 取值范围1M -1024M, 默认:20M
 # 假定size=10M, 文件为20MiB 则使用两个来源下载; 文件为15MiB 则使用一个来源下载
 min-split-size=10M
 # 单个任务最大线程数, 添加时可指定, 默认:5
-#split=5
+split=32
 # 整体下载速度限制, 运行时可修改, 默认:0
 #max-overall-download-limit=0
 # 单个任务下载速度限制, 默认:0
@@ -35,7 +42,7 @@ min-split-size=10M
 # 单个任务上传速度限制, 默认:0
 #max-upload-limit=0
 # 禁用IPv6, 默认:false
-#disable-ipv6=true
+disable-ipv6=false
 # 连接超时时间, 默认:60
 #timeout=60
 # 最大重试次数, 设置为0表示不限制重试次数, 默认:5
@@ -46,9 +53,9 @@ min-split-size=10M
 ## 进度保存相关 ##
 
 # 从会话文件中读取下载任务
-input-file=/Users/osennyaya/.config/aria2_rpc/aria2.session
+input-file=./.config/aria2_rpc/aria2.session
 # 在 Aria2 退出时保存 ` 错误 / 未完成 ` 的下载任务到会话文件
-save-session=/Users/osennyaya/.config/aria2_rpc/aria2.session
+save-session=./.config/aria2_rpc/aria2.session
 # 定时保存会话, 0 为退出时才保存, 需 1.16.1 以上版本, 默认:0
 save-session-interval=0
 
@@ -88,15 +95,15 @@ listen-port=51413
 # 单个种子最大连接数, 默认:55
 #bt-max-peers=55
 # 打开DHT功能, PT需要禁用, 默认:true
-enable-dht=false
+enable-dht=true
 # 打开IPv6 DHT功能, PT需要禁用
-#enable-dht6=false
+enable-dht6=true
 # DHT网络监听端口, 默认:6881-6999
 #dht-listen-port=6881-6999
 # 本地节点查找, PT需要禁用, 默认:false
-#bt-enable-lpd=false
+bt-enable-lpd=true
 # 种子交换, PT需要禁用, 默认:true
-enable-peer-exchange=false
+enable-peer-exchange=true
 # 每个种子限速, 对少种的PT很有用, 默认:50K
 #bt-request-peer-speed-limit=50K
 # 客户端伪装, PT需要
@@ -114,5 +121,4 @@ seed-ratio=0
 bt-seed-unverified=true
 # 保存磁力链接元数据为种子文件(.torrent文件), 默认:false
 bt-save-metadata=true
-
-all-proxy=http://127.0.0.1:7890
+bt-tracker=http://1337.abcvg.info:80/announce,http://78.30.254.12:2710/announce,http://[2001:1b10:1000:8101:0:242:ac11:2]:6969/announce,http://[2001:470:1:189:0:1:2:3]:6969/announce,http://[2a04:ac00:1:3dd8::1:2710]:2710/announce,http://bt.rghost.net:80/announce,http://carbon-bonsai-621.appspot.com:80/announce,http://explodie.org:6969/announce,http://fxtt.ru:80/announce,http://googer.cc:1337/announce,http://h4.trakx.nibba.trade:80/announce,http://kinorun.com:80/announce.php,http://milanesitracker.tekcities.com:80/announce,http://nyaa.tracker.wf:7777/announce,http://open.acgnxtracker.com:80/announce,http://opentracker.i2p.rocks:6969/announce,http://opentracker.xyz:80/announce,http://pow7.com:80/announce,http://retracker.hotplug.ru:2710/announce,http://retracker.sevstar.net:2710/announce,http://retracker.spark-rostov.ru:80/announce,http://share.camoe.cn:8080/announce,http://siambit.com:80/announce.php,http://t.acg.rip:6699/announce,http://t.nyaatracker.com:80/announce,http://t.overflow.biz:6969/announce,http://torrent-team.net:80/announce.php,http://torrenttracker.nwc.acsalaska.net:6969/announce,http://torrentzilla.org:80/announce,http://torrentzilla.org:80/announce.php,http://tr.cili001.com:8070/announce,http://tr.kxmp.cf:80/announce,http://tracker-cdn.moeking.me:2095/announce,http://tracker.birkenwald.de:6969/announce,http://tracker.bittor.pw:1337/announce,http://tracker.breizh.pm:6969/announce,http://tracker.bt4g.com:2095/announce,http://tracker.dler.org:6969/announce,http://tracker.etree.org:6969/announce,http://tracker.files.fm:6969/announce,http://tracker.gbitt.info:80/announce,http://tracker.ipv6tracker.org:80/announce,http://tracker.ipv6tracker.ru:80/announce,http://tracker.lelux.fi:80/announce,http://tracker.loadbt.com:6969/announce,http://tracker.noobsubs.net:80/announce,http://tracker.opentrackr.org:1337/announce,http://tracker.tfile.me:80/announce,http://tracker.trackerfix.com:80/announce,http://tracker.uw0.xyz:6969/announce,http://tracker.yoshi210.com:6969/announce,http://tracker.yowe.net:80/announce,http://tracker2.dler.org:80/announce,http://vps02.net.orel.ru:80/announce,http://www.shnflac.net:80/announce.php,http://www.wareztorrent.com:80/announce,http://www.zone-torrent.net:80/announce.php,https://1337.abcvg.info:443/announce,https://carbon-bonsai-621.appspot.com:443/announce,https://mytracker.fly.dev:443/announce,https://open.kickasstracker.com:443/announce,https://opentracker.acgnx.se:443/announce,https://opentracker.xyz:443/announce,https://tr.torland.ga:443/announce,https://tracker.bt-hash.com:443/announce,https://tracker.coalition.space:443/announce,https://tracker.iriseden.eu:443/announce,https://tracker.iriseden.fr:443/announce,https://tracker.lelux.fi:443/announce,https://tracker.lilithraws.cf:443/announce,https://tracker.nitrix.me:443/announce,https://tracker.tamersunion.org:443/announce,https://trakx.herokuapp.com:443/announce,https://w.wwwww.wtf:443/announce,udp://212.1.226.176:2710/announce,udp://52.58.128.163:6969/announce,udp://6ahddutb1ucc3cp.ru:6969/announce,udp://78.30.254.12:2710/announce,udp://9.rarbg.com:2810/announce,udp://9.rarbg.com:2900/announce,udp://9.rarbg.me:2710/announce,udp://9.rarbg.to:2710/announce,udp://91.216.110.52:451/announce,udp://[2001:1b10:1000:8101:0:242:ac11:2]:6969/announce,udp://[2001:470:1:189:0:1:2:3]:6969/announce,udp://[2a03:7220:8083:cd00::1]:451/announce,udp://[2a04:ac00:1:3dd8::1:2710]:2710/announce,udp://[2a0f:e586:f:f::220]:6969/announce,udp://abufinzio.monocul.us:6969/announce,udp://admin.videoenpoche.info:6969/announce,udp://anidex.moe:6969/announce,udp://app.icon256.com:8000/announce,udp://bt.100.pet:2711/announce,udp://bt.yui.cat:55268/announce,udp://bt2.54new.com:8080/announce,udp://bubu.mapfactor.com:6969/announce,udp://code2chicken.nl:6969/announce,udp://concen.org:6969/announce,udp://cutiegirl.ru:6969/announce,udp://discord.heihachi.pw:6969/announce,udp://edu.uifr.ru:6969/announce,udp://engplus.ru:6969/announce,udp://exodus.desync.com:6969/announce,udp://explodie.org:6969/announce,udp://fe.dealclub.de:6969/announce,udp://ipv4.tracker.harry.lu:80/announce,udp://ipv6.tracker.zerobytes.xyz:16661/announce,udp://mail.realliferpg.de:6969/announce,udp://movies.zsw.ca:6969/announce,udp://mts.tvbit.co:6969/announce,udp://open.demonii.com:1337/announce,udp://open.publictracker.xyz:6969/announce,udp://open.stealth.si:80/announce,udp://opentor.org:2710/announce,udp://opentracker.i2p.rocks:6969/announce,udp://p4p.arenabg.com:1337/announce,udp://peerfect.org:6969/announce,udp://pow7.com:80/announce,udp://public.publictracker.xyz:6969/announce,udp://public.tracker.vraphim.com:6969/announce,udp://retracker.hotplug.ru:2710/announce,udp://retracker.lanta-net.ru:2710/announce,udp://retracker.netbynet.ru:2710/announce,udp://retracker.nts.su:2710/announce,udp://retracker.sevstar.net:2710/announce,udp://thetracker.org:80/announce,udp://tr.bangumi.moe:6969/announce,udp://tracker-de.ololosh.space:6969/announce,udp://tracker.0x.tf:6969/announce,udp://tracker.aletorrenty.pl:2710/announce,udp://tracker.altrosky.nl:6969/announce,udp://tracker.army:6969/announce,udp://tracker.beeimg.com:6969/announce,udp://tracker.birkenwald.de:6969/announce,udp://tracker.bittor.pw:1337/announce,udp://tracker.blacksparrowmedia.net:6969/announce,udp://tracker.breizh.pm:6969/announce,udp://tracker.coppersurfer.tk:6969/announce,udp://tracker.cyberia.is:6969/announce,udp://tracker.dler.com:6969/announce,udp://tracker.dler.org:6969/announce,udp://tracker.eddie4.nl:6969/announce,udp://tracker.edkj.club:6969/announce,udp://tracker.filemail.com:6969/announce,udp://tracker.flashtorrents.org:6969/announce,udp://tracker.halfchub.club:6969/announce,udp://tracker.kuroy.me:5944/announce,udp://tracker.leech.ie:1337/announce,udp://tracker.lelux.fi:6969/announce,udp://tracker.loadbt.com:6969/announce,udp://tracker.moeking.me:6969/announce,udp://tracker.monitorit4.me:6969/announce,udp://tracker.nrx.me:6969/announce,udp://tracker.ololosh.space:6969/announce,udp://tracker.openbittorrent.com:6969/announce,udp://tracker.opentrackr.org:1337/announce,udp://tracker.sktorrent.net:6969/announce,udp://tracker.skyts.net:6969/announce,udp://tracker.swateam.org.uk:2710/announce,udp://tracker.theoks.net:6969/announce,udp://tracker.tiny-vps.com:6969/announce,udp://tracker.torrent.eu.org:451/announce,udp://tracker.uw0.xyz:6969/announce,udp://tracker.vanitycore.co:6969/announce,udp://tracker.zerobytes.xyz:1337/announce,udp://tracker0.ufibox.com:6969/announce,udp://tracker1.bt.moack.co.kr:80/announce,udp://tracker2.christianbro.pw:6969/announce,udp://tracker2.dler.com:80/announce,udp://tracker2.dler.org:80/announce,udp://tracker4.itzmx.com:2710/announce,udp://udp-tracker.shittyurl.org:6969/announce,udp://vibe.community:6969/announce,udp://vibe.sleepyinternetfun.xyz:1738/announce,udp://wassermann.online:6969/announce,udp://www.torrent.eu.org:451/announce,wss://tracker.openwebtorrent.com:443/announce
