--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.zshrc: zshrc
     ~/.config/i3: i3
     ~/.config/alacritty: alacritty
+    ~/.gitignore: global_gitignore/.gitignore
 
 - create:
     - ~/.vim/undo-history
