fix aria2c path for macos

--- a/aria2_rpc/aria2.plist
+++ b/aria2_rpc/aria2.plist
@@ -5,10 +5,10 @@
     <key>Label</key>
     <string>com.jackieliu.aria2c</string>
     <key>Program</key>
-    <string>/usr/local/bin/aria2c</string>
+    <string>/opt/homebrew/bin/aria2c</string>
     <key>ProgramArguments</key>
     <array>
-        <string>/usr/local/bin/aria2c</string>
+        <string>/opt/homebrew/bin/aria2c</string>
         <string>--conf-path</string>
         <string>/Users/osennyaya/.config/aria2_rpc/aria2.conf</string>
     </array>
