add alacritty colors

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -27,4 +27,4 @@
   - [cd ./aria2_rpc && ./mac_install.sh, Add aria2 rpc services]
   - [pip3 install pynvim]
   - touch ~/.config/aria2_rpc/aria2.session 
-
+  - [pip3 install --user alacritty-colorscheme, install alacritty color cli]
