--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,3 +28,4 @@
   - [pip3 install pynvim]
   - touch ~/.config/aria2_rpc/aria2.session 
   - [pip3 install --user alacritty-colorscheme, install alacritty color cli]
+  - [git clone https://github.com/chriskempson/base16-shell.git ~/.config/base16-shell, base16 shell]
