--- a/aria2_rpc/aria2.plist
+++ b/aria2_rpc/aria2.plist
@@ -4,13 +4,13 @@
 <dict>
     <key>Label</key>
     <string>com.jackieliu.aria2c</string>
-    <key>Program</key>
-    <string>/opt/homebrew/bin/aria2c</string>
+    <key>WorkingDirectory</key>
+    <string>/Users/osennyaya</string>
     <key>ProgramArguments</key>
     <array>
         <string>/opt/homebrew/bin/aria2c</string>
         <string>--conf-path</string>
-        <string>/Users/osennyaya/.config/aria2_rpc/aria2.conf</string>
+        <string>.config/aria2_rpc/aria2.conf</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
