--- a/i3/config
+++ b/i3/config
@@ -57,7 +57,7 @@ bindsym $mod+Return exec alacritty
 bindsym $alt+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $alt+space exec --no-startup-id rofi -show drun
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -89,21 +89,21 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-# bindsym $mod+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
-#bindsym $mod+v split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $alt+Return fullscreen toggle
+bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+t layout tabbed
-bindsym $mod+space layout toggle split
+#bindsym $mod+s layout stacking
+#bindsym $mod+t layout tabbed
+#bindsym $mod+space layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+f floating toggle
+bindsym $mod+Shift+space floating toggle
 bindsym $mod+button1 floating toggle
 
 # change focus between tiling / floating windows
@@ -190,9 +190,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-        #status_command i3status
-#}
+bar {
+        status_command i3status
+}
 
 # Plasma compatibility improvements
 for_window [window_role="pop-up"] floating enable
@@ -215,3 +215,10 @@ no_focus [class="plasmashell" window_type="notification"]
 for_window [title="Desktop — Plasma"] kill; floating enable; border none
 for_window [title="桌面 — Plasma"] kill; floating enable; border none
 for_window [class="Alacritty"] border pixel 2
+
+exec --no-startup-id fcitx5 -d
+exec xset r rate 230 30
+exec xrandr --output DP-1 --mode 1920x1080 --rate 144.00
+
+exec --no-startup-id thunar --daemon &
+exec --no-startup-id nm-applet --no-agent &
