--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_family Monaco
-font_size 16
+font_family Monaco for Powerline
+font_size 14
 #macos_thicken_font 0.75
 #
 #hide_window_decorations yes
