crossplatform link & shell

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "alacritty/base16-alacritty"]
 	path = alacritty/base16-alacritty
 	url = https://github.com/aarowill/base16-alacritty.git
+[submodule "dotbot-crossplatform"]
+	path = dotbot-crossplatform
+	url = git@github.com:msdrigg/dotbot-crossplatform.git
