--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,30 +4,58 @@
 
 - clean: ['~']
 
-- link:
-    ~/.vimrc: .vimrc
-    ~/.tmux.conf: tmux.conf
-    ~/.config/nvim: nvim
-    ~/.config/skhd: skhd
-    ~/.config/spacebar: spacebar
-    ~/.config/yabai: yabai
-    ~/.config/aria2_rpc: aria2_rpc
-    ~/.zshrc: zshrc
-    ~/.config/i3: i3
-    ~/.config/alacritty: alacritty
-    ~/.config/kitty: kitty
-    ~/.gitignore: global_gitignore/.gitignore
-    ~/.config/systemd/user/aria2.service: aria2_rpc/aria2.service
-    ~/.Xmodmap: Xmodmap
+- crossplatform-link:
+    ~/.vimrc:
+      path: .vimrc
+    ~/.tmux.conf:
+      path: tmux.conf
+    ~/.config/nvim:
+      path: nvim
+    ~/.config/skhd:
+      path: skhd
+      platform: darwin
+    ~/.config/spacebar:
+      path: spacebar
+      platform: darwin
+    ~/.config/yabai:
+      path: yabai
+      platform: darwin
+    ~/.config/aria2_rpc:
+      path: aria2_rpc
+    ~/.zshrc:
+      path: zshrc
+    ~/.config/i3:
+      path: i3
+      platform: linux
+    ~/.config/alacritty:
+      path: alacritty
+    ~/.config/kitty:
+      path: kitty
+    ~/.gitignore:
+      path: global_gitignore/.gitignore
+    ~/.config/systemd/user/aria2.service:
+      path: aria2_rpc/aria2.service
+      platform: linux
+    ~/.Xmodmap:
+      path: Xmodmap
+      platform: linux
 
 - create:
     - ~/.vim/undo-history
 
-- shell:
-  - [git submodule update --init --recursive, Installing submodules]
-  - [cd ./aria2_rpc && ./mac_install.sh, Add aria2 rpc services]
-  - [pip3 install pynvim]
-  - touch ~/.config/aria2_rpc/aria2.session 
-  - [pip3 install --user alacritty-colorscheme, install alacritty color cli]
-  - [git clone https://github.com/chriskempson/base16-shell.git ~/.config/base16-shell, base16 shell]
-  - [cd ./alacritty/color_scripts/ && python3 _genscripts.py, generate color scripts]
+- crossplatform-shell:
+  - command: git submodule update --init --recursive
+    description: Installing submodules 
+  - command: cd ./aria2_rpc && ./mac_install.sh
+    description: Add aria2 rpc services 
+    platform: darwin
+  - command: pip3 install pynvim
+    description: install pynvim
+  - command: touch ~/.config/aria2_rpc/aria2.session 
+    description: touch empty aria2 session
+  - command: pip3 install --user alacritty-colorscheme
+    description: install alacritty color cli 
+  - command: git clone https://github.com/chriskempson/base16-shell.git ~/.config/base16-shell
+    description: base16 shell 
+  - command: cd ./alacritty/color_scripts/ && python3 _genscripts.py
+    description: generate color scripts 
