--- a/i3/config
+++ b/i3/config
@@ -14,15 +14,16 @@ set $alt Mod1
 
 default_border pixel 2
 
-gaps inner 5
-gaps outer 5
-smart_gaps on
+gaps inner 2
+gaps outer 2
+#smart_gaps on
 smart_borders on
+border_radius 5
 
 #hide_edge_borders smart_no_gaps
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -190,9 +191,10 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#	position top
+#        status_command i3status
+#}
 
 # Plasma compatibility improvements
 for_window [window_role="pop-up"] floating enable
@@ -220,8 +222,13 @@ exec --no-startup-id fcitx5 -d
 exec xset r rate 230 30
 exec xrandr --output DP-1 --mode 1920x1080 --rate 144.00
 
-exec --no-startup-id thunar --daemon &
-exec --no-startup-id nm-applet --no-agent &
-exec --no-startup-id pasystray &
+exec --no-startup-id thunar --daemon
+exec --no-startup-id nm-applet --no-agent
+exec --no-startup-id pasystray
 
 exec --no-startup-id picom -b 
+exec --no-startup-id xmodmap .xmodmaprc 
+exec --no-startup-id polybar example
+
+exec --no-startup-id nitrogen --restore
+exec --no-startup-id nutstore
