--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,10 @@
-font_family Monaco
-font_size 16
+font_family Monaco for Powerline
+font_size 18
 macos_thicken_font 0.75
+
+symbol_map U+0061-U+007A Monaco
+
+window_padding_width 5
 
 hide_window_decorations yes
 
