--- a/i3/config
+++ b/i3/config
@@ -53,6 +53,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec alacritty
+bindsym $mod+c exec google-chrome-stable
 
 # kill focused window
 bindsym $alt+q kill
