--- a/i3/config
+++ b/i3/config
@@ -53,6 +53,7 @@ floating_modifier $mod
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec alacritty
 bindsym $mod+c exec google-chrome-stable
+bindsym $mod+e exec thunar
 
 # kill focused window
 bindsym $alt+q kill
