--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,6 @@
-font_family Monaco for Powerline
-font_size 16
+font_family TamzenForPowerline
+font_size 15
 macos_thicken_font 0.75
-
-symbol_map U+0061-U+007A Monaco
 
 window_padding_width 5
 
