--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -112,13 +112,14 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     #family: Cascadia Mono PL
-    family: Monaco for Powerline
+    family: TamzenForPowerline
+    #family: Gohu GohuFont
 
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   ## Point size
-  size: 14
+  size: 9
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
