--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ smart_borders on
 #hide_edge_borders smart_no_gaps
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 9
+font TamzenForPowerline:7
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -192,10 +192,10 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-#	position top
-#        status_command i3status
-#}
+bar {
+        position bottom
+        status_command i3status
+}
 
 # Plasma compatibility improvements
 for_window [window_role="pop-up"] floating enable
@@ -229,7 +229,6 @@ exec --no-startup-id pasystray
 
 exec --no-startup-id picom -b 
 exec --no-startup-id xmodmap .xmodmaprc 
-exec --no-startup-id polybar example
+#exec --no-startup-id polybar example
 
 exec --no-startup-id nitrogen --restore
-exec --no-startup-id nutstore
