--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ smart_borders on
 #hide_edge_borders smart_no_gaps
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font TamzenForPowerline:7
+font Cozette:7
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -201,8 +201,11 @@ bar {
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [class="Steam"] floating enable
+for_window [class="ddd"] floating enable
+for_window [title="Android Emulator"] floating enable
 
 for_window [class="yakuake"] floating enable
+for_window [class="jetbrains-studio"] floating enable
 for_window [class="systemsettings"] floating enable
 for_window [class="plasmashell"] floating enable;
 for_window [class="Plasma"] floating enable; border none
