--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,6 @@
-font_family TamzenForPowerline
+font_family Jetbrains Mono
+# font_family Sarasa Fixed SC
+symbol_map U+4E00-U+9FA5 Sarasa Fixed SC
 font_size 15
 macos_thicken_font 0.75
 
@@ -8,7 +10,76 @@ hide_window_decorations yes
 
 allow_remote_control yes
 
+## color 
 foreground #ffffff
 background #1e1e1e
 
 color1 #C6533A
+
+
+## ------- 
+# https://draculatheme.com/kitty
+#
+# Installation instructions:
+#
+#  cp dracula.conf ~/.config/kitty/
+#  echo "include dracula.conf" >> ~/.config/kitty/kitty.conf
+#
+# Then reload kitty for the config to take affect.
+# Alternatively copy paste below directly into kitty.conf
+
+foreground            #f8f8f2
+background            #282a36
+selection_foreground  #ffffff
+selection_background  #44475a
+
+url_color #8be9fd
+
+# black
+color0  #21222c
+color8  #6272a4
+
+# red
+color1  #ff5555
+color9  #ff6e6e
+
+# green
+color2  #50fa7b
+color10 #69ff94
+
+# yellow
+color3  #f1fa8c
+color11 #ffffa5
+
+# blue
+color4  #bd93f9
+color12 #d6acff
+
+# magenta
+color5  #ff79c6
+color13 #ff92df
+
+# cyan
+color6  #8be9fd
+color14 #a4ffff
+
+# white
+color7  #f8f8f2
+color15 #ffffff
+
+# Cursor colors
+cursor            #f8f8f2
+cursor_text_color background
+
+# Tab bar colors
+active_tab_foreground   #282a36
+active_tab_background   #f8f8f2
+inactive_tab_foreground #282a36
+inactive_tab_background #6272a4
+
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
+
+map shift+enter send_text all \x1b[13;2u
+
