--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -61,7 +61,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: none
+  decorations: buttonless
 
   # Startup Mode (changes require restart)
   #
@@ -112,7 +112,7 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     #family: Cascadia Mono PL
-    family: Sarasa Mono SC
+    family: JetbrainsMono Nerd Font
     #family: Gohu GohuFont
 
     # The `style` can be specified to pick a specific face.
