--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ smart_borders on
 #hide_edge_borders smart_no_gaps
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font Cozette:7
+# font Cozette:7
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -51,7 +51,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec kitty
 bindsym $mod+c exec google-chrome-stable
 bindsym $mod+e exec thunar
 
@@ -107,12 +107,12 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-#bindsym $mod+s layout stacking
-bindsym $mod+t layout tabbed
-#bindsym $mod+space layout toggle split
+# bindsym $mod+t layout stacking
+bindsym $mod+m layout tabbed
+bindsym $mod+t layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+s floating toggle
 bindsym $mod+button1 floating toggle
 
 # change focus between tiling / floating windows
@@ -120,8 +120,6 @@ bindsym $mod+button1 floating toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
-
-bindsym $alt+Tab exec --no-startup-id rofi -modi combi -combi-modi window -show combi
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -199,10 +197,10 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        position bottom
-        status_command i3status
-}
+# bar {
+#         position bottom
+#         status_command i3status
+# }
 
 # Plasma compatibility improvements
 for_window [window_role="pop-up"] floating enable
@@ -230,15 +228,18 @@ for_window [title="桌面 — Plasma"] kill; floating enable; border none
 for_window [class="Alacritty"] border pixel 2
 
 exec --no-startup-id fcitx5 -d
-exec xset r rate 230 30
-exec xrandr --output DP-1 --mode 1920x1080 --rate 144.00
 
-exec --no-startup-id thunar --daemon
-exec --no-startup-id nm-applet --no-agent
-exec --no-startup-id pasystray
-
-exec --no-startup-id picom -b 
-exec --no-startup-id xmodmap .xmodmaprc 
+# exec --no-startup-id pasystray
 #exec --no-startup-id polybar example
-
+# exec xsetroot -cursor_name left_ptr &
+exec --no-startup-id thunar --daemon
+exec --no-startup-id nm-applet --no-agent --indicator
+exec --no-startup-id picom -CGb
+exec /usr/bin/dunst
+exec xfce4-panel -d
 exec --no-startup-id nitrogen --restore
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec ~/.screenlayout/monitor.sh
+exec sh -c 'sleep 3;. ~/.dotfiles/keyboard.sh'
+exec wmname LG3D
+exec dex -a -s /etc/xdg/autostart/:~/.config/autostart/  
