--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -48,6 +48,8 @@
       platform: darwin
     ~/.config/aria2_rpc:
       path: aria2_rpc
+    ~/.config/fish:
+      path: fish
     ~/.zshrc:
       path: zshrc
     ~/.config/i3:
