--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -149,8 +149,8 @@ font:
 #   - (macOS) /bin/bash --login
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
-#shell:
-  #program: /bin/zsh
+# shell:
+#   program: /opt/homebrew/bin/fish
   #args:
     #- -c
     #- "tmux new-session -A -s main"
