--- a/i3/config
+++ b/i3/config
@@ -12,12 +12,12 @@
 set $mod Mod4
 set $alt Mod1
 
-default_border pixel 3
+default_border pixel 2
 
 gaps inner 2
 gaps outer 2
 #smart_gaps on
-smart_borders on
+# smart_borders on
 
 #hide_edge_borders smart_no_gaps
 # Font for window titles. Will also be used by the bar unless a different font
@@ -51,7 +51,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec urxvt
 bindsym $mod+c exec google-chrome-stable
 bindsym $mod+e exec thunar
 
