--- a/i3/config
+++ b/i3/config
@@ -51,7 +51,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec wezterm
+bindsym $mod+Return exec alacritty
 bindsym $mod+c exec google-chrome-stable
 bindsym $mod+e exec thunar
 bindsym $alt+Shift+a exec flameshot gui
