--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -607,3 +607,23 @@ colors:
     magenta: '0x6e4962'
     cyan: '0x5c8482'
     white: '0x828282'
+
+cursor:
+  # Cursor style
+  style:
+    # Cursor shape
+    #
+    # Values for `shape`:
+    #   - ▇ Block
+    #   - _ Underline
+    #   - | Beam
+    shape: Underline
+
+    # Cursor blinking state
+    #
+    # Values for `blinking`:
+    #   - Never: Prevent the cursor from ever blinking
+    #   - Off: Disable blinking by default
+    #   - On: Enable blinking by default
+    #   - Always: Force the cursor to always blink
+    blinking: Always
