--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,8 @@ set -g base-index 1
 set-option -g mouse on
 
 # 256颜色
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set-option -g terminal-overrides ",xterm-256color:RGB"
 
 ### 快捷键设置
 ###########################################################################
