--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # tmux.conf 示例
+#
 # 2014.10
 
 
@@ -20,7 +21,7 @@ set -g base-index 1
 set-option -g mouse on
 
 # 256颜色
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 set-option -g terminal-overrides ",xterm-256color:RGB"
 
 ### 快捷键设置
@@ -90,6 +91,8 @@ setw -g window-status-current-style fg=white
 # 自动设置窗口标题
 set-option -g set-titles on
 set-option -g set-titles-string '#W' # 窗口编号,程序名称,是否活动
+
+set-option -g default-shell /opt/homebrew/bin/fish
 
 # 调整状态栏
 set -g status-left "#[fg=#555555] #S#[fg=#555555] | #[fg=#555555]"
