--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,23 @@
+confirm_os_window_close 0
+map cmd+x send_text all \x1bx
+map cmd+d send_text all \x1bd
+map cmd+e send_text all \x1be
+
 # font_family Jetbrains Mono
-font_family Sarasa Mono SC
-# symbol_map U+4E00-U+9FA5 Sarasa Fixed SC
-font_size 15
-macos_thicken_font 0.75
+shell /opt/homebrew/bin/fish
+term xterm-256color
+
+font_family Iosevka
+font_size 17
+
+macos_option_as_alt yes
+macos_thicken_font 0.25
 
 window_padding_width 5
 
-hide_window_decorations no
+hide_window_decorations yes
 
 allow_remote_control yes
 
-map shift+enter send_text all \x1b[13;2u
 
 include ./theme.conf
