--- a/Rime/.gitignore
+++ b/Rime/.gitignore
@@ -1,2 +1,18 @@
+.DS_Store
+**/.idea/
+.vscode/
+
+build/
+*.userdb/
 installation.yaml
 user.yaml
+*.custom.yaml
+
+others/script/scel2txt/out/*
+others/script/scel2txt/scel/*
+
+*private*
+
+rime_console
+rime_deployer
+rime_patch
