--- a/i3/config
+++ b/i3/config
@@ -53,7 +53,7 @@ floating_modifier $mod
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
 #bindsym $mod+c exec google-chrome-stable
-bindsym $mod+c exec firefox-developer-edition
+bindsym $mod+c exec microsoft-edge-stable
 bindsym $mod+d exec eudic
 bindsym $mod+e exec thunar
 bindsym $alt+Shift+a exec flameshot gui
