--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,11 @@
 confirm_os_window_close 0
 map cmd+x send_text all \x1bx
+map cmd+w send_text all \x1bw
 map cmd+d send_text all \x1bd
 map cmd+e send_text all \x1be
+map cmd+s send_text all \x1bs
+map cmd+h send_text all \x1bh
+map cmd+l send_text all \x1bl
 
 # font_family Jetbrains Mono
 shell /opt/homebrew/bin/fish
@@ -20,4 +24,8 @@ hide_window_decorations yes
 allow_remote_control yes
 
 
-include ./theme.conf
+
+# BEGIN_KITTY_THEME
+# Snow Dark
+include current-theme.conf
+# END_KITTY_THEME
