--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ map cmd+h send_text all \x1bh
 map cmd+l send_text all \x1bl
 
 # font_family Jetbrains Mono
-#shell /opt/homebrew/bin/fish
+shell /opt/homebrew/bin/fish
 term xterm-256color
 
 font_family Iosevka
